--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormTramites.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormTramites.form
@@ -92,12 +92,12 @@
                           <Component id="imgLogo" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="txtTitulo" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                                       <Component id="btnCerrar" min="-2" max="-2" attributes="0"/>
                                   </Group>
+                                  <Component id="txtTitulo" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
