--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormPago.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormPago.form
@@ -149,14 +149,15 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="txtTituloTramite" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txtTramite" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="txtTituloTramite" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
                               <Component id="btnAceptar" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                              <Component id="txtTramite" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
