Genera los reportes con la info consultada

--- a/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormReporteTramites.form
+++ b/AgenciaFiscalPresentacion/src/main/java/com/mycompany/agenciafiscalpresentacion/FormReporteTramites.form
@@ -221,7 +221,7 @@
             </Container>
             <Component class="javax.swing.JButton" name="btnGenerarReporte">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Generara reporte"/>
+                <Property name="text" type="java.lang.String" value="Generar reporte"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGenerarReporteActionPerformed"/>
